style: プロジェクトカードのデザインを改善 - カードの高さを統一、画像の高さを固定、タグの表示を改善、ナビゲーションのアクティブ状態のデザインを改善

--- a/package.json
+++ b/package.json
@@ -61,13 +61,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^18.19.78",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.2.22",
+    "autoprefixer": "10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.0",
     "typescript": "^5.0.4"
   },
   "pnpm": {
