--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "framer-motion": "^12.4.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
+    "microcms-js-sdk": "^3.2.0",
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
@@ -68,6 +69,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss": "8.4.31",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "3.3.0",
     "typescript": "^5.0.4"
   },
