--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "npx next dev",
+    "build": "npx next build",
+    "start": "npx next start",
+    "lint": "npx next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
@@ -61,22 +61,20 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@types/bun": "latest",
     "@types/node": "^18.19.78",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "10.4.16",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.0",
+    "eslint": "^9.25.0",
+    "eslint-config-next": "^15.3.1",
+    "picocolors": "1.0.0",
     "postcss": "8.4.31",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "3.3.0",
     "typescript": "^5.0.4"
-  },
-  "pnpm": {
-    "ignoredBuiltDependencies": [
-      "sharp"
-    ]
   }
 }
